<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.ui.inicio.PriPantallaActivity">


    <ImageView
        android:id="@+id/LogoPrincipal"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/TituloPrincipalApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombredelaapp"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/NombreAutorMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="15dp"
        android:text="@string/my_name"
        android:textColor="@color/orange"
        android:textSize="16sp" />


</LinearLayout>