<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:contentDescription="@string/todo">



    <!-- CONTENEDOR LOGO Y NOMBREAPP -->
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
        android:layout_marginTop="15dp">

       <!-- LOGO DE LA APP -->
       <ImageView
           android:id="@+id/LogoPrincipal"
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:layout_marginLeft="15dp"
           android:layout_marginTop="20dp"
           android:layout_gravity="left"
           android:src="@drawable/ic_logo" />

       <!-- NOMBRE APP -->
       <TextView
           android:id="@+id/TituloPrincipalApp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/nombredelaapp"
           android:textColor="@android:color/white"
           android:textSize="30sp"
           android:textStyle="bold"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="30dp"/>

   </LinearLayout>

    <!-- SUBTEXTO -->
    <TextView
        android:id="@+id/DescripcionLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_bienvenida_login"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- CONTENEDOR INPUTS E ICONO GENERAL -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginVertical="30dp">

        <!-- ICONOS VERTICALES -->
        <ImageView
            android:id="@+id/iconosVerticalLogin"
            android:layout_width="66dp"
            android:layout_height="115dp"
            android:scaleType="fitXY"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_icono"/>

            <!-- CONTENEDOR INPUTS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CampoUsuarioLogin"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/ic_input_rounded"
                    android:hint="@string/primer_campo"
                    android:padding="12dp"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CampoContraseñaLogin"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_input_rounded"
                    android:hint="@string/segundo_campo"
                    android:padding="12dp"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    />

            </LinearLayout>

    </LinearLayout>

    <!-- CONTENEDOR BOTÓN INGRESAR Y RECUPERA CONTRASEÑA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresarLogin"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/ingresar"
            android:textColor="@color/red_letter_buttoms"
            android:textSize="24sp"
            android:layout_gravity="center"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="30dp"
            app:strokeColor="@color/red_border_input"
            app:strokeWidth="3dp"
            />

        <TextView
            android:id="@+id/RecuperarContraseñaLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/recupera_tu_contrase_a"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />


    </LinearLayout>

    <!-- CONTENEDOR INGRESA CON GOOGLE Y REGISTRATE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleIngresoLogin"
            android:layout_width="290dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/ingresa_con_google"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            app:backgroundTint="@android:color/white"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_google_icon"
            app:iconGravity="textStart"

            app:iconPadding="12dp"
            app:iconTint="@null"

            app:strokeColor="#E24A3B"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/Mensaje_Notienes_Cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_cuenta"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/MensajeRegistrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>



