<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- CONTENEDOR CENTRAL -->
    <LinearLayout
        android:id="@+id/layoutCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- LOGO -->
        <ImageView
            android:id="@+id/LogoPrincipal"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/logo_de_la_app_contente_description" />

        <!-- NOMBRE DE LA APP -->
        <TextView
            android:id="@+id/TituloPrincipalApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombredelaapp_main"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <!-- TU NOMBRE ABAJO -->
    <TextView
        android:id="@+id/NombreAutorMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textSize="16sp"
        android:textColor="#D94C44"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>